# thirdlife

./: .gitignore  README.md  package.json
client/: index.js  package.json
client/gulp/: build.js  serve.js
client/public/: halflion.html  index.html  lion.html
client/public/js/: viewer.js
client/src/: PointCloudOctreeGeometry.js  Potree.js
client/src/loader/: BinaryLoader.js
scripts/: install  setup  startClient  startServer  update
server/: CMakeLists.txt
server/PotreeConverter/: CMakeLists.txt
server/PotreeConverter/include/: PotreeConverter.h  PotreeWriter.h
server/PotreeConverter/src/: PotreeConverter.cpp  PotreeWriter.cpp  main.cpp
server/TCPServer/: CMakeLists.txt  TCPServer.cpp  TCPServer.h  handler_client.h  main.cpp
server/test/: README
server/test/blank_html_page/: cloud.js
server/test/blank_html_page/data/r/: r.hrc
server/test/blank_html_page/data/r/16666/: r16666.hrc
server/test/blank_html_page/data/r/16666/66673/: r1666666673.hrc
server/test/blank_html_page/data/r/34444/: r34444.hrc
server/test/blank_html_page/data/r/34444/44455/: r3444444455.hrc
server/test/blank_html_page/data/r/52222/: r52222.hrc
server/test/blank_html_page/data/r/70000/: r70000.hrc
server/test/blank_html_page/examples/: testpage.html  testpage.js
server/test/resources/: default.ply  default_binary.ply
